# wg

./: '  Cargo.toml  Dockerfile  Makefile  run.sh
scripts/: run_client.sh  run_server.sh
src/: device.rs  handshake.rs  ipc.rs  lib.rs  main.rs  message.rs  peer.rs  rwcancel.rs  unix.rs  wg.rs
src/conn/: mod.rs
src/device/: logger.rs  mod.rs
src/tun/: checksum.rs  mod.rs  offload.rs
